# proc-macro-workshop

./: main.rs
bitfield/: Cargo.toml
bitfield/examples/: bits.rs  enum.rs  max.rs
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 04-multiple-of-8bits.stderr  09-variant-out-of-range.stderr
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs  main.rs  proc_impl.rs
