[package]
name = "bitfield"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
proc-macro2 = "1.0.106"
quote = "1.0.44"
seq = { path = "../seq" }
syn = { version = "2.0.116", features = ["full", "extra-traits"] }
