[package]
name = "seq"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["extra-traits", "full"] }
# TODO
